Prevent empty columns from collapsing.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -8,3 +8,7 @@ $fi-path: "../bower_components/foundation-icon-fonts";
   @include grid-row();
   margin-top: 2em;
 }
+
+.columns {
+  min-height: 1px;
+}
